Fix date time issues
